<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

    <ImageView
            android:id="@+id/im_logo"
            android:src="@drawable/idwall_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            style="@style/PrimaryTextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_logo"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="e-mail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="logar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email"/>

    <TextView
            android:id="@+id/tv_about_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sobre o Desenvolvedor"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
