<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout_to_app"
            android:title="Sair"
            app:showAsAction="ifRoom|withText"/>
</menu>